更新中间件部署脚本
