# backend/docs/swagger.json
@@ -7,6 +7,183 @@
         "version": "1.0"
     },
     "paths": {
+        "/crm/entity/create": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "CrmEntityController"
+                ],
+                "summary": "创建客户实体",
+                "operationId": "createEntity",
+                "parameters": [
+                    {
+                        "description": "创建实体参数",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/crm.EntityCreateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ApiResult-any"
+                        }
+                    }
+                }
+            }
+        },
+        "/crm/entity/delete": {
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "CrmEntityController"
+                ],
+                "summary": "删除客户实体",
+                "operationId": "deleteEntity",
+                "parameters": [
+                    {
+                        "description": "删除实体参数",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/crm.EntityDeleteRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ApiResult-any"
+                        }
+                    }
+                }
+            }
+        },
+        "/crm/entity/detail": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "CrmEntityController"
+                ],
+                "summary": "获取客户实体详情",
+                "operationId": "getEntityDetail",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "实体ID",
+                        "name": "entityId",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ApiResult-crm_CrmEntityVo"
+                        }
+                    }
+                }
+            }
+        },
+        "/crm/entity/list": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "CrmEntityController"
+                ],
+                "summary": "获取客户实体列表",
+                "operationId": "getEntityList",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "页码",
+                        "name": "pageNum",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "每页数量",
+                        "name": "pageSize",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "实体名称",
+                        "name": "entityName",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "实体标识",
+                        "name": "entityCode",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ApiResult-response_PageResult-crm_CrmEntityVo"
+                        }
+                    }
+                }
+            }
+        },
+        "/crm/entity/update": {
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "CrmEntityController"
+                ],
+                "summary": "更新客户实体",
+                "operationId": "updateEntity",
+                "parameters": [
+                    {
+                        "description": "更新实体参数",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/crm.EntityUpdateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ApiResult-any"
+                        }
+                    }
+                }
+            }
+        },
         "/system/auth/adminPwdLogin": {
             "post": {
                 "consumes": [
@@ -16,7 +193,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "authController"
+                    "SystemAuthController"
                 ],
                 "summary": "运营端账号密码登录",
                 "operationId": "adminPwdLogin",
@@ -47,7 +224,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "authController"
+                    "SystemAuthController"
                 ],
                 "summary": "运营端获取当前用户",
                 "operationId": "getCurrentUser",
@@ -70,7 +247,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "permissionController"
+                    "SystemPermissionController"
                 ],
                 "summary": "创建权限",
                 "operationId": "createPermission",
@@ -104,7 +281,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "permissionController"
+                    "SystemPermissionController"
                 ],
                 "summary": "删除权限",
                 "operationId": "deletePermission",
@@ -135,7 +312,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "permissionController"
+                    "SystemPermissionController"
                 ],
                 "summary": "获取权限详情",
                 "operationId": "getPermissionDetail",
@@ -164,7 +341,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "permissionController"
+                    "SystemPermissionController"
                 ],
                 "summary": "获取权限列表",
                 "operationId": "getPermissionList",
@@ -219,7 +396,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "permissionController"
+                    "SystemPermissionController"
                 ],
                 "summary": "更新权限",
                 "operationId": "updatePermission",
@@ -253,7 +430,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "roleController"
+                    "SystemRoleController"
                 ],
                 "summary": "创建角色",
                 "operationId": "createRole",
@@ -287,7 +464,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "roleController"
+                    "SystemRoleController"
                 ],
                 "summary": "删除角色",
                 "operationId": "deleteRole",
@@ -318,7 +495,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "roleController"
+                    "SystemRoleController"
                 ],
                 "summary": "获取角色详情",
                 "operationId": "getRoleDetail",
@@ -347,7 +524,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "roleController"
+                    "SystemRoleController"
                 ],
                 "summary": "获取角色列表",
                 "operationId": "getRoleList",
@@ -396,7 +573,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "roleController"
+                    "SystemRoleController"
                 ],
                 "summary": "更新角色",
                 "operationId": "updateRole",
@@ -430,7 +607,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "rolePermissionRelController"
+                    "SystemRolePermissionRelController"
                 ],
                 "summary": "为角色分配权限",
                 "operationId": "assignPermissionsToRole",
@@ -461,7 +638,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "rolePermissionRelController"
+                    "SystemRolePermissionRelController"
                 ],
                 "summary": "根据权限ID获取角色列表",
                 "operationId": "getRolesByPermissionId",
@@ -490,7 +667,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "rolePermissionRelController"
+                    "SystemRolePermissionRelController"
                 ],
                 "summary": "根据角色ID获取权限列表",
                 "operationId": "getPermissionsByRoleId",
@@ -522,7 +699,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "rolePermissionRelController"
+                    "SystemRolePermissionRelController"
                 ],
                 "summary": "移除角色的权限",
                 "operationId": "removePermissionFromRole",
@@ -556,7 +733,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "userController"
+                    "SystemUserController"
                 ],
                 "summary": "创建用户",
                 "operationId": "createUser",
@@ -590,7 +767,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "userController"
+                    "SystemUserController"
                 ],
                 "summary": "删除用户",
                 "operationId": "deleteUser",
@@ -621,7 +798,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "userController"
+                    "SystemUserController"
                 ],
                 "summary": "获取用户详情",
                 "operationId": "getUserDetail",
@@ -650,7 +827,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "userController"
+                    "SystemUserController"
                 ],
                 "summary": "获取用户列表",
                 "operationId": "getUserList",
@@ -711,7 +888,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "userController"
+                    "SystemUserController"
                 ],
                 "summary": "重置密码",
                 "operationId": "updatePassword",
@@ -745,7 +922,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "userController"
+                    "SystemUserController"
                 ],
                 "summary": "更新用户",
                 "operationId": "updateUser",
@@ -779,7 +956,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "userRoleRelController"
+                    "SystemUserRoleRelController"
                 ],
                 "summary": "为用户分配角色",
                 "operationId": "assignRolesToUser",
@@ -810,7 +987,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "userRoleRelController"
+                    "SystemUserRoleRelController"
                 ],
                 "summary": "根据角色ID获取用户列表",
                 "operationId": "getUsersByRoleId",
@@ -839,7 +1016,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "userRoleRelController"
+                    "SystemUserRoleRelController"
                 ],
                 "summary": "根据用户ID获取角色列表",
                 "operationId": "getRolesByUserId",
@@ -871,7 +1048,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "userRoleRelController"
+                    "SystemUserRoleRelController"
                 ],
                 "summary": "移除用户的角色",
                 "operationId": "removeRoleFromUser",
@@ -898,6 +1075,81 @@
         }
     },
     "definitions": {
+        "crm.CrmEntityVo": {
+            "type": "object",
+            "properties": {
+                "createTime": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "entityCode": {
+                    "type": "string"
+                },
+                "entityId": {
+                    "type": "string",
+                    "example": "0"
+                },
+                "entityName": {
+                    "type": "string"
+                },
+                "updateTime": {
+                    "type": "string"
+                }
+            }
+        },
+        "crm.EntityCreateRequest": {
+            "type": "object",
+            "required": [
+                "entityCode",
+                "entityName"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "entityCode": {
+                    "type": "string"
+                },
+                "entityName": {
+                    "type": "string"
+                }
+            }
+        },
+        "crm.EntityDeleteRequest": {
+            "type": "object",
+            "required": [
+                "entityId"
+            ],
+            "properties": {
+                "entityId": {
+                    "type": "string",
+                    "example": "0"
+                }
+            }
+        },
+        "crm.EntityUpdateRequest": {
+            "type": "object",
+            "required": [
+                "entityId"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "entityCode": {
+                    "type": "string"
+                },
+                "entityId": {
+                    "type": "string",
+                    "example": "0"
+                },
+                "entityName": {
+                    "type": "string"
+                }
+            }
+        },
         "response.ApiResult-any": {
             "type": "object",
             "properties": {
@@ -981,6 +1233,38 @@
                     "items": {
                         "$ref": "#/definitions/system.UserWithRoleVo"
                     }
+                },
+                "msg": {
+                    "type": "string",
+                    "example": "成功"
+                }
+            }
+        },
+        "response.ApiResult-crm_CrmEntityVo": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 200
+                },
+                "data": {
+                    "$ref": "#/definitions/crm.CrmEntityVo"
+                },
+                "msg": {
+                    "type": "string",
+                    "example": "成功"
+                }
+            }
+        },
+        "response.ApiResult-response_PageResult-crm_CrmEntityVo": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 200
+                },
+                "data": {
+                    "$ref": "#/definitions/response.PageResult-crm_CrmEntityVo"
                 },
                 "msg": {
                     "type": "string",
@@ -1113,6 +1397,26 @@
                 "msg": {
                     "type": "string",
                     "example": "成功"
+                }
+            }
+        },
+        "response.PageResult-crm_CrmEntityVo": {
+            "type": "object",
+            "properties": {
+                "list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/crm.CrmEntityVo"
+                    }
+                },
+                "pageNum": {
+                    "type": "integer"
+                },
+                "pageSize": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
                 }
             }
         },
